# 1.00.00 (39390) Mar 18, 2010
3/18/10 1.0 release to PhET website
3/18/10 create screenshot for website
3/18/10 delete TODO file, all work is complete, any additional work will be tracked in Unfuddle
3/18/10 #2218, workaround for spinners problem
3/18/10 add Kelly's feedback to model.txt
3/17/10 rename ChemicalReaction.getNumberOfReactions because it's referenced in model.txt
3/17/10 create high-level description of model in model.txt
3/17/10 #2196, fix problem with y offset of "products" bracket, the sandwich image wasn't properly initialized by Reset All
3/17/10 #2196, move responsibility for sandwich image update to SandwichReaction class
3/17/10 dynamic nodes were being initialized twice in SandwichShopCanvas constructor
3/17/10 simplification and reordering of initial layout and init in AbstractAfterNode constructor, #2196
# 0.00.40 (39347) Mar 17, 2010
3/17/10 another dev version for verifying #2219
3/17/10 #2219, rewrite GameOverNode with no JPanel to workaround PSwing bounds problem
# 0.00.39 (39330) Mar 16, 2010
3/16/10 dev version for verifying #2219
3/16/10 #2219, make GameOverNode's JPanel totally static, to see if that solves the PSwing bounds problem
3/16/10 #2218, pull IntegerSpinner out of IntegerSpinnerNode, for testing
# 0.00.38 (39263) Mar 11, 2010
3/11/10 1.0-rc1 (first release candidate for version 1.0)
3/11/10 #2194, remove flag for sandwich choices feature, we're including this (r39261)
3/11/10 remove flag for making sandwich coefficients read-only, we're keeping them editable (r39256)
3/11/10 remove flag for hiding histogram bars, we're keeping them (r39255)
3/11/10 fix initial position of product & leftover brackets, don't assume coefficients are zero
3/11/10 fix problem with layout shifting vertically when height of SandwichEquationNode is different
3/11/10 simplify the ChemicalReaction model, remove some redundant code for the "no reaction" case
3/10/10 #2194, enable sandwich choices feature for possible inclusion in 1.0