@@ -20,6 +20,7 @@ label.reactants=reactants
 label.products=products
 label.leftovers=leftovers
 label.level=Level: {0}
+label.levelControl=Level:
 label.score=Score: {0}
 label.score.max=Score: {0} out of {1}
 label.score.max.perfect=Score: {0} out of {1} (PERFECT!)
