@@ -1,3 +1,5 @@
+> make Game Settings panel translatable
+9/27/10 #2527, incomplete localization of Game Settings panel
 # 1.00.00 (39390) Mar 18, 2010
 3/18/10 1.0 release to PhET website
 3/18/10 create screenshot for website
